2006-05-20 18:11 Gregory John Casamento <greg_casamento@yahoo.com>

	* ChangeLog
	* Documentation/ReleaseNotes.gsdoc
	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h
	* Headers/Additions/GNUstepGUI/GSNibTemplates.h
	* Headers/AppKit/NSNib.h
	* Source/GNUmakefile
	* Source/GSNibCompatibility.m
	* Source/NSActionCell.m
	* Source/NSBundleAdditions.m
	* Source/NSButtonCell.m
	* Source/NSCell.m
	* Source/NSClipView.m
	* Source/NSColorWell.m
	* Source/NSLayoutManager.m
	* Source/NSMatrix.m
	* Source/NSMenuItem.m
	* Source/NSNib.m
	* Source/NSOutlineView.m
	* Source/NSPopUpButtonCell.m
	* Source/NSScroller.m
	* Source/NSScrollView.m
	* Source/NSSecureTextField.m
	* Source/NSSliderCell.m
	* Source/NSStepperCell.m
	* Source/NSTableView.m
	* Source/NSTextContainer.m
	* Source/NSTextField.m
	* Source/NSTextView.m
	* Source/NSView.m: Merged nib loading code from NibCompatibility.

2006-05-15 21:55 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Streamlined previous change.

2006-05-15 00:54 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Add title mask if window has
	a title in the archive.
	* Source/NSPopUpButtonCell.m: Clear and reset the menu
	in the popup button cell initWithCoder: method.

2006-05-14 20:58 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/GSNibCompatibility.m: Added autosaveName.

2006-05-10 23:55 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSButtonCell.m
	* Source/NSCell.m
	* Source/NSMatrix.m: Improved initWithCoder: nib support.

2006-05-09 22:48 Gregory John Casamento <greg_casamento@yahoo.com>

	* Source/NSStepperCell.m: Implemented keyed coding.

2006-05-07 22:36 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSNibCompatibility.h: Added 
	_originalClassName member.
	* Source/GSNibCompatibility.m: use new member in
	instantiateRealObject:withClassName: to allow auto-substitution
	of cell classes.