@@ -1,3 +1,9 @@
+2006-05-20 18:25 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* Source/GSNibCompatibility.m
+	* Source/NSButtonCell.m: Merged additional changes from 
+	NibCompatibility.
+
 2006-05-20 18:11 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* ChangeLog
